better UX hopefully

--- a/popup.html
+++ b/popup.html
@@ -19,7 +19,7 @@
         </p>
       </div>
       <div class="connected hidden">
-        <p>Share the URL below so others can join the party. The recipient(s) should navigate to this URL and then open Netflix Party to join.</p>
+        <p>Share the URL below so others can join the party. The recipient(s) should navigate to this URL and <strong>then click on the Netflix Party icon</strong> to join.</p>
         <input id="share-url" type="text" readonly="true" autocomplete="off" autofocus />
         <p class="copy-val">
           <small><a href="#" id="copy-btn">Copy URL</a></small>
